# meshtastic-bbs

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  run.sh  setup.sh
bbs/: Application.py  Configuration.py  Database.py  Logger.py  SerialManager.py  __init__.py
bbs/plugins/: BasePlugin.py  PluginManager.py  __init__.py
bbs/plugins/builtin/: Admin.py  BulletinBoard.py  Hangman.py  PersonalMessaging.py  Zork.py  __init__.py
bbs/protocol/: CommandParser.py  CommandRouter.py  __init__.py
docs/: PLUGIN_DEVELOPMENT.md
